# garageweb

./: .env.default  .gitignore  PORTS-GPIO.md  README.md  config.py  door.py  doorAutomator.py  doorController.py  doorControls.py  doorService.py  doorWeb.py  doorWebUI.py  init.d_garage--script  loggerService.py  pyproject.toml  relaytest.py  test-config.py  utils.py  web.py  webUtils.py  webstreaming.py
cam/: README.md  static_images.sh
garageweb/: config.py  door.py  doorMonitor.py  main.py  utils.py
garageweb/static/: index.html  manifest.json  rest.js
garageweb/static/favicon/: manifest.json
motion_detection/: singlemotiondetector.py  webstreaming.py
static/: Closed.html  Closed_with_camera.html  Open.html  Question.html  ajax.js  index.html  notify.js  reload.js  rest.js  stylesheet.css
